@startuml RTC_Database_Schema
title Schema de Base de Donnees - Hello World RTC

hide circle
skinparam linetype ortho
skinparam backgroundColor #1a1a1a
skinparam package {
  BackgroundColor #2d2d2d
  BorderColor #4FDFFF
  FontColor #ffffff
}
skinparam entity {
  BackgroundColor #3d3d3d
  BorderColor #4FDFFF
  FontColor #ffffff
}
skinparam arrow {
  Color #4FDFFF
}

' ================== POSTGRESQL ==================
package "PostgreSQL (Sourde de Vérité)" {

  entity "users" as users {
    + id : UUID <<PK>>
    --
    username : VARCHAR
    email : VARCHAR <<UNIQUE>>
    password_hash : VARCHAR
    status : ENUM
    avatar_url : VARCHAR?
    created_at : TIMESTAMP
  }

  entity "servers" as servers {
    + id : UUID <<PK>>
    --
    name : VARCHAR
    # owner_id : UUID <<FK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  entity "server_members" as members {
    + server_id : UUID <<PK, FK>>
    + user_id : UUID <<PK, FK>>
    --
    role : ENUM(owner, admin, member)
    joined_at : TIMESTAMP
  }

  entity "server_bans" as bans {
    + server_id : UUID <<PK, FK>>
    + user_id : UUID <<PK, FK>>
    --
    # banned_by : UUID <<FK>>
    reason : VARCHAR?
    expires_at : TIMESTAMP?
    banned_at : TIMESTAMP
  }

  entity "channels" as channels {
    + id : UUID <<PK>>
    --
    # server_id : UUID <<FK>>
    name : VARCHAR
    position : INT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  entity "invites" as invites {
    + id : UUID <<PK>>
    --
    # server_id : UUID <<FK>>
    code : VARCHAR <<UNIQUE>>
    # created_by : UUID <<FK>>
    expires_at : TIMESTAMP?
    max_uses : INT?
    uses : INT
    revoked : BOOLEAN
    created_at : TIMESTAMP
  }

  entity "direct_messages" as dms {
    + id : UUID <<PK>>
    --
    # user1_id : UUID <<FK>>
    # user2_id : UUID <<FK>>
    created_at : TIMESTAMP
  }

  entity "friendships" as friends {
    + user1_id : UUID <<PK, FK>>
    + user2_id : UUID <<PK, FK>>
    --
    created_at : TIMESTAMP
  }

  entity "attachments" as attachments {
    + id : UUID <<PK>>
    --
    # sender_id : UUID <<FK>>
    filename : VARCHAR
    file_path : VARCHAR
    content_type : VARCHAR?
    file_size : BIGINT?
    created_at : TIMESTAMP
  }

  ' ---- PostgreSQL Relations ----
  users   ||--o{ servers     : owns
  servers ||--o{ members     : has
  users   ||--o{ members     : joins
  servers ||--o{ channels    : contains
  servers ||--o{ invites     : has
  users   ||--o{ invites     : creates
  servers ||--o{ bans        : blacklists
  users   ||--o{ bans        : is banned
  users   ||--o{ dms         : participates
  users   ||--o{ friends     : is friend
  users   ||--o{ attachments : uploads
}

' ================== MONGODB ==================
package "MongoDB (Historique & Messages)" #553333 {

  entity "channel_messages" as ch_msg {
    + _id : ObjectId
    --
    message_id : UUID <<UNIQUE>>
    channel_id : UUID
    server_id : UUID
    author_id : UUID
    content : TEXT
    reactions : ARRAY(user_id, emoji, created_at)
    created_at : TIMESTAMP
    edited_at : TIMESTAMP?
    deleted_at : TIMESTAMP?
    deleted_by : UUID?
  }

  entity "direct_message_items" as dm_msg {
    + _id : ObjectId
    --
    message_id : UUID <<UNIQUE>>
    dm_id : UUID
    author_id : UUID
    content : TEXT
    reactions : ARRAY(user_id, emoji, created_at)
    created_at : TIMESTAMP
    edited_at : TIMESTAMP?
    deleted_at : TIMESTAMP?
  }
}

' ================== CROSS-DB LINKS ==================
channels    ..> ch_msg : channel_id (logical)
servers     ..> ch_msg : server_id (logical)
users       ..> ch_msg : author_id (logical)
dms         ..> dm_msg : dm_id (logical)
attachments ..> ch_msg : usage (logical)
attachments ..> dm_msg : usage (logical)

@enduml
